--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -6,8 +6,9 @@
         <h2>Services</h2>
         <button data-topic="arch" data-height="112" class="services--button active">Archaeology<span class="slider"></span></button>
         <button data-topic="history" data-height="190" class="services--button">Architectural History<span class="slider"></span></button>
-        <button data-topic="gis" data-height="282" class="services--button">Geophysical Surveys <br>Remote Sensing<span class="slider"></span></button>
+        <button data-topic="gis" data-height="282" class="services--button">Geographic and <br>Information Services<span class="slider"></span></button>
         <button data-topic="cemetery" data-height="388" class="services--button">Cemetery Evaluation <br>and Excavation<span class="slider"></span></button>
+        <button data-topic="gis2" data-height="478" class="services--button">Geophysical Services<span class="slider"></span></button>
         <span id="services--block"></span>
     </div>
     <div id="services--selector--mobile">
@@ -15,8 +16,9 @@
         <select id="services--picker__mobile">
             <option data-topic="arch">Archaeology</option>
             <option data-topic="history">Architectural History</option>
-            <option data-topic="gis">Geophysical Surveys Remote Sensing</option>
+            <option data-topic="gis">Geographic and Information Services</option>
             <option data-topic="cemetery">Cemetery Evaluation and Excavation</option>
+            <option data-topic="gis2">Geophysical Services</option>
         </select>    
     </div>
 
@@ -32,7 +34,7 @@
             <a href="#">View Case Study</a>
         </div>
         <div id="gis" class="services--descs--contain">
-            <h3>Geophysical Surveys Remote Sensing</h3>
+            <h3>Geographic and Information Services</h3>
             <p>Our goal in using Geographic Information Systems (GIS) is to help our client better gain an advantage from the large amount of geographic data we have at our disposal. Having this much data at our fingertips allows our firm to identify “up front” any project constraints that may exist. We are the only cultural resources management firm in the region that owns and maintains this amount of data, and we can put it to work for you!</p>
             <a href="#">View Case Study</a>
         </div>
@@ -41,6 +43,12 @@
             <p>Heritage Consultants also offers experience and expertise in cemetery-related studies as part of our client services. We have completed cemetery projects for energy sector, transportation sector, and private sector clients, as well as state agencies. The staff of Heritage Consultants also has formulated and operationalized Unanticipated Discovery Plans in a wide variety of settings, including housing subdivisions, natural gas lines, and electricity utility projects. Heritage Consultants has also undertaken the excavation and recovery of human remains from both small and large cemeteries that have been endangered by infrastructural projects and by natural processes.</p>
             <a href="#">View Case Study</a>
         </div>
+        <div id="gis2" class="services--descs--contain">
+            <h3>Geophysical Services</h3>
+            <p>Geophysical investigations are a non-invasive way to survey areas of archaeological potential.  Common types of surveys paired with archaeological investigations often include Ground Penetrating Radar, Magnetometry, or Metal Detection surveys.  At Heritage Consultants, we tailor each of our geophysical investigations to project specific goals, and often employ these techniques in combinations with Phase I, II, or III archaeological investigations. </p>
+            <a href="#">View Case Study</a>
+        </div>
+
     </div>
     <div id="services--images">
         <div id="services--images--contain">
@@ -48,6 +56,7 @@
             <img id="history--image" class="" src="history.webp" alt="Picture of classic colonial white house" loading="lazy" width="350" height="250">
             <img id="gis--image" class="" src="GIS.webp" alt="Classic weathered map of Hartford" loading="lazy" width="350" height="250">
             <img id="cemetery--image" class="" src="cemetery.webp" alt="Image of cemetery being excavated" loading="lazy" width="350" height="250">
+            <img id="gis2--image" class="" src="GIS2.webp" alt="Topography Map" loading="lazy" width="350" height="250">
             <div class="frame"></div>
         </div>  
     </div>
