--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -9,10 +9,10 @@ import Layout from '../layouts/Layout.astro';
         <div id="leadership">
             <div class="leadership--title"><img src="/HC-DavidGeorge.webp" alt="Picture of CEO David George" height="500" width="500"><h2>David George, M.A., RPA</h2></div>
             <div class="leadership--title"><img src="/HC-WilliamKeegan.webp" alt="Headshot of William Keegan" height="500" width="500"><h2>William Keegan, B.A.</h2></div>
-            <div class="leadership--title"><img src="/HC-DavidLeslie.webp" alt="Headshot of David Leslie Ph.D." height="500" width="500"><h2>David Leslie Ph.D., RPA</h2></div>
-            <p class="leadership--bio">David George is President & CEO of Heritage Consultants. He has over 30 years of experience in cultural resources management and has directed over 3,000 projects throughout the Nation, with an emphasis on New England and New York. Mr. George holds an M.A. in Anthropology from the University of Connecticut and is a National Park Service 36 CFR 61-qualified archaeologist. He has completed projects on behalf of hundreds of clients and understands the intricacies of the cultural resources management process.</p>
+            <div class="leadership--title"><img src="/HC-DavidLeslie.webp" alt="Headshot of David Leslie Ph.D." height="500" width="500"><h2>David Leslie, Ph.D., RPA</h2></div>
+            <p class="leadership--bio">David George is President & CEO of Heritage Consultants. He has over 30 years of experience in cultural resources management and has directed over 3,000 projects throughout the Nation, with an emphasis on New England and New York. Mr. George holds an M.A. in Anthropology from the University of Connecticut and is a National Park Service 36 CFR 61-qualified archaeologist. He has completed projects on behalf of hundreds of clients and understands the intricacies of the cultural resources management process.<br><a href="mailto:DGEORGE@HERITAGE-CONSULTANTS.COM">DGeorge@Heritage-Consultants.com</a></p>
             <p class="leadership--bio">Mr. William F. Keegan serves as Vice President and Historical Geographer at Heritage Consultants. He received his Bachelor of Arts degree in Anthropology from the University of Connecticut in 1996. He is a co-founder of the company and he specializes in archival, genealogical, and historical research, as well as Geographic Information Systems applications in archeology, specifically historic landscape reconstruction and fatal flaws analysis.</p>
-            <p class="leadership--bio">Dr. Leslie is the Director of Research at Heritage Consultants and has over 20 years of archaeological experience.  He is a geoarchaeologist and lithic specialist, and earned his Ph.D. in Anthropology at the University of Connecticut.  He has worked at all levels of archaeology and spent the last eight years as a Principal Investigator in the Northeast, designing and implementing all phases of archaeological survey and recovery, including geophysical and geoarchaeological investigations.  His work has been published in peer-reviewed journals such as Science, PaleoAmerica, Archaeology of Eastern North America, and Northeast Anthropology.</p>
+            <p class="leadership--bio">Dr. Leslie is the Director of Research at Heritage Consultants and has over 20 years of archaeological experience.  He is a geoarchaeologist and lithic specialist, and earned his Ph.D. in Anthropology at the University of Connecticut.  He has worked at all levels of archaeology and spent the last eight years as a Principal Investigator in the Northeast, designing and implementing all phases of archaeological survey and recovery, including geophysical and geoarchaeological investigations.  His work has been published in peer-reviewed journals such as Science, PaleoAmerica, Archaeology of Eastern North America, and Northeast Anthropology.<br><a href="mailto:DLESLIE@HERITAGE-CONSULTANTS.COM">DLeslie@Heritage-Consultants.com</a></p>
         </div>
         <div id="projectManagers">
             <h2>Project Managers</h2>
@@ -49,6 +49,7 @@ import Layout from '../layouts/Layout.astro';
         </div>
     
     </section>
+        <h2>Join Our Team</h2>
     <section id="jobs">
     
     </section>
