--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -240,6 +240,7 @@ import Layout from '../layouts/Layout.astro';
         .leadership--title > img ,  .managers--title > img{
             max-width: 500px;
             width: 100%;
+            height: auto;
         }
         .leadership--bio:nth-of-type(1){
             grid-row-start: 2;
