final picture fix

--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -237,7 +237,7 @@ import Layout from '../layouts/Layout.astro';
             aspect-ratio: 1;
             max-height: 500px;
         }
-        .leadership--title > img ,  .managers--title > img{
+        .leadership--title > img ,  .managers--title > img ,  .twoWide--title > img{
             max-width: 500px;
             width: 100%;
             height: auto;
