--- a/src/components/Card-Big.astro
+++ b/src/components/Card-Big.astro
@@ -21,7 +21,7 @@ if(odd){
 ---
 <div class="card--contain">
 	<div class={`card ${type} ${flipped}`}>
-		<a aria-label={`link to article ${title}`} class="card--image" href={href} style={`background-image: url("${image}"); background-position: center; background-repeat: no-repeat; background-size: cover;`}><span class="frame"></span></a>
+		<a aria-label={`link to article ${title}`} class="card--image" href={href} style={`background-image: url("${image}"); background-position: center; background-repeat: no-repeat; background-size: cover;`}></a>
 	
 		<div class="card--text--contain">
 			<h2>{title}</h2>
@@ -54,14 +54,7 @@ if(odd){
 		margin:36px;
 		aspect-ratio: 350 / 250;
 		position: relative;
-	}
-	.card--image > .frame {
-		position: absolute;
-		width:100%;
-		height: 100%;
-		top: -24px;
-		left: -24px;
-		border: 8px solid #0063A7;
+		border: 12px solid #0063A7;
 	}
 	h2{
 		font-size: 1.8rem;
@@ -110,9 +103,9 @@ if(odd){
 		background-color: #0063A7;
 		color:#fff;
 	}
-	.card.flipped > .card--image > .frame {
-		left: 24px;
-		border: 8px solid #fff;
+	.card.flipped > .card--image {
+		border: 12px solid #fff;
+		box-shadow:inset 0px 0px 1px 1px #000;
 	}
 	.card.flipped > .card--text--contain{
 		grid-column: 1 / 2;
@@ -153,9 +146,6 @@ if(odd){
 		.card.flipped > .card--text--contain{
 			grid-column: auto;
 			grid-row: auto;
-		}
-		.card.flipped > .card--image > .frame {
-			left:-24px;
 		}
 	}
 
