--- a/src/components/Commited.astro
+++ b/src/components/Commited.astro
@@ -5,7 +5,6 @@
     <div id="committed--contain">
         <div id="committed--image">
             <img src="./committed.webp" alt="men walking around in forrest in high oragne vests" height="384" width="512">
-            <div class="frame"></div>
         </div>
         <div id="committed--text">
             <h2>Committed to you</h2>
@@ -23,7 +22,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        padding:24px 48px;
+        padding:48px 48px;
         width:100%;
     }
     #committed--contain {
@@ -76,15 +75,7 @@
         max-width: calc(100% - 24px);
         width: 100%;
         height: 100%;
-
-    }
-    #committed--image > .frame {
-        width: calc(100% - 12px);
-        height: calc(100%);
         border: 12px solid #0063A7;
-        position: absolute;
-        top:36px;
-        left:-36px;
     }
 
     @media only screen and (max-width: 1179px) { 
@@ -112,17 +103,11 @@
         #committed--image { 
             justify-content: end;
             justify-self: end;
-            text-align: right;
+            text-align: center;
             width: 100%;
             margin: 48px 0;
         }
-        #committed--image > .frame {
-            max-width: calc(100% - 12px);
-            max-height: calc(100% + 24px);
-            top: 24px;
-            right: 12px;
-            left:auto;
-        }
+
         #committed--buttons {
             display: flex;
             justify-content: space-around;
