--- a/src/components/news.astro
+++ b/src/components/news.astro
@@ -44,7 +44,7 @@ const posts = entries.items.map((item) => {
     #news{
         background-color: #fff;
         width: 100%;
-        height: 950px;
+        height: fit-content;
         padding:48px;
         position: relative;
         color:#fff;
@@ -54,7 +54,6 @@ const posts = entries.items.map((item) => {
         max-width: 1920px;
         display: flex;
         flex-direction: column;
-         
     }
     #news > p {
         color:#fff;
@@ -75,7 +74,8 @@ const posts = entries.items.map((item) => {
         width: 100%;
         max-width: 1400px;
         align-self:center;
-        align-items:stretch
+        align-items:stretch;
+        height: fit-content;
     }
 
     @media only screen and (max-width: 1200px) { 
