--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -156,7 +156,7 @@
         margin:0px;
     }
     .services--descs--contain > a{
-        display: block;
+        display: none;
         background-color:#0063A7;
         color:#fff;
         text-decoration: none;
