added job listsings

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -24,7 +24,7 @@ let links = [
     },
     {
         label: "Employment",
-        link: "/team/#jobs",
+        link: "/jobs/",
         class: ""
     },
 
