fixed image sizes

--- a/src/components/Card-Big.astro
+++ b/src/components/Card-Big.astro
@@ -21,7 +21,7 @@ if(odd){
 ---
 <div class="card--contain">
 	<div class={`card ${type} ${flipped}`}>
-		<a aria-label={`link to article ${title}`} class="card--image" href={href} style={`background-image: url("${image}"); background-position: center; background-repeat: no-repeat; background-size: cover;`}></a>
+		<a aria-label={`link to article ${title}`} class="card--image" href={href} style={`background-image: url("${image}?w=350&h=250"); background-position: center; background-repeat: no-repeat; background-size: cover;`}></a>
 	
 		<div class="card--text--contain">
 			<h2>{title}</h2>
