--- a/src/components/Card-Job.astro
+++ b/src/components/Card-Job.astro
@@ -26,7 +26,7 @@ if(odd){
 <div class="card--contain">
 	<div class={`card ${flipped}`}>
 		<div class="card--title--contain">
-			<img src={image} alt={imageDesc} width="688" height="384">
+			<img src={`${image}?w=688&h=384`} alt={imageDesc} width="688" height="384" loading="lazy">
 			<h2>{title}</h2>
 		</div>
 		<div class="card--text--contain">	
