removed small card color

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -83,7 +83,7 @@ const { title, desc, href, image, tag, type } = Astro.props;
         background-color: #004575;
 	}
 
-	/* Field Study turned Green */
+	/* Field Study turned Green
 	.card.FieldStudy {
 		border: 2px solid #537F69;
 	}
@@ -101,7 +101,7 @@ const { title, desc, href, image, tag, type } = Astro.props;
 	}
 
 	/* Announcement */
-	.card.Announcement {
+	/* .card.Announcement {
 		border: 2px solid #867365;
 	}
 	.card.Announcement > .card--tag{
@@ -115,7 +115,7 @@ const { title, desc, href, image, tag, type } = Astro.props;
 	}
 	.card.Announcement > .card--button:hover{
 		background-color: #5e5147;
-	}
+	} */ */
 
 	@media only screen and (max-width: 1200px) { 
 		.card {
