added lazy load to iframe

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -14,7 +14,7 @@
             <a href="tel:860-299-6328" id="contactCall">Call Us</a>
           </form>
     </div>
-    <div style="width: 100%"><iframe title="google maps interactive widget for finding 830 BERLIN TPKE, BERLIN, CT 06037 our office address" width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=830%20BERLIN%20TPKE,%20BERLIN,%20CT%2006037+(Heritage%20Consultants)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.maps.ie/distance-area-calculator.html">measure acres/hectares on map</a></iframe></div>
+    <div style="width: 100%"><iframe loading="lazy" title="google maps interactive widget for finding 830 BERLIN TPKE, BERLIN, CT 06037 our office address" width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=830%20BERLIN%20TPKE,%20BERLIN,%20CT%2006037+(Heritage%20Consultants)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.maps.ie/distance-area-calculator.html">measure acres/hectares on map</a></iframe></div>
 </section>
 <style>
     /* Hide Labels except for screen readers */
