--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -83,39 +83,39 @@ const { title, desc, href, image, tag, type } = Astro.props;
         background-color: #004575;
 	}
 
-	/* Field Study turned Green
-	.card.FieldStudy {
+	/* Field Study turned Green */
+	.card.\31 {
 		border: 2px solid #537F69;
 	}
-	.card.FieldStudy > .card--tag{
+	.card.\31 > .card--tag{
 		background-color: #537F69;
 	}
-	.card.FieldStudy > hr{
+	.card.\31> hr{
 		background-color: #537F69;
 	}
-	.card.FieldStudy > .card--button{
+	.card.\31 > .card--button{
 		background-color: #537F69;
 	}
-	.card.FieldStudy > .card--button:hover{
+	.card.\31 > .card--button:hover{
 		background-color: #3a594a;
 	}
 
 	/* Announcement */
-	/* .card.Announcement {
+	.card.\32 {
 		border: 2px solid #867365;
 	}
-	.card.Announcement > .card--tag{
+	.card.\32 > .card--tag{
 		background-color: #867365;
 	}
-	.card.Announcement > hr{
+	.card.\32 > hr{
 		background-color: #867365;
 	}
-	.card.Announcement > .card--button{
+	.card.\32 > .card--button{
 		background-color: #867365;
 	}
-	.card.Announcement > .card--button:hover{
+	.card.\32 > .card--button:hover{
 		background-color: #5e5147;
-	} */ */
+	}
 
 	@media only screen and (max-width: 1200px) { 
 		.card {
