--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -17,7 +17,7 @@ const { title, desc, href, image, tag, type } = Astro.props;
 	<h3>{title}</h3>
 	<hr>
 	<p class="card--desc">{desc}</p>
-	<a href={href} class="card--button" aria-label={`link to article ${title}`}>Read More</a>
+	<a href={href} class="card--button" aria-label={`link to article ${title}`}>Read Article</a>
 </div>
 <style>
 	.card {
