--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -52,11 +52,11 @@
     </div>
     <div id="services--images">
         <div id="services--images--contain">
-            <img width="350" height="250" id="arch--image" class="active" alt="Picture of a historical red bridge" loading="lazy" srcset="arch.webp 350w, arch-b.webp 500w" sizes="(maxWidth : 350px) 350px , (maxWidth : 500px) 500px">
-            <img width="350" height="250" id="history--image" class="" alt="Picture of classic colonial white house" loading="lazy" srcset="history.webp 350w, history-b.webp 500w" sizes="(maxWidth : 350px) 350px , (maxWidth : 500px) 500px">
-            <img width="350" height="250" id="gis--image" class="" alt="Classic weathered map of Hartford" loading="lazy" srcset="GIS.webp 350w, GIS-b.webp 500w" sizes="(maxWidth : 350px) 350px , (maxWidth : 500px) 500px">
-            <img width="350" height="250" id="cemetery--image" class="" alt="Image of cemetery being excavated" loading="lazy" srcset="cemetery.webp 350w, cemetery-b.webp 500w" sizes="(maxWidth : 350px) 350px , (maxWidth : 500px) 500px">
-            <img width="350" height="250" id="gis2--image" class="" alt="Topography Map" loading="lazy" srcset="GIS2.webp 350w, GIS2-b.webp 500w" sizes="(maxWidth : 350px) 350px , (maxWidth : 500px) 500px">
+            <img width="500" height="357" id="arch--image" class="active" alt="Picture of a historical red bridge" loading="lazy" srcset="arch.webp 350w, arch-b.webp 500w" sizes="(maxWidth : 350px) 350px , (maxWidth : 500px) 500px">
+            <img width="500" height="357" id="history--image" class="" alt="Picture of classic colonial white house" loading="lazy" srcset="history.webp 350w, history-b.webp 500w" sizes="(maxWidth : 350px) 350px , (maxWidth : 500px) 500px">
+            <img width="500" height="357" id="gis--image" class="" alt="Classic weathered map of Hartford" loading="lazy" srcset="GIS.webp 350w, GIS-b.webp 500w" sizes="(maxWidth : 350px) 350px , (maxWidth : 500px) 500px">
+            <img width="500" height="357" id="cemetery--image" class="" alt="Image of cemetery being excavated" loading="lazy" srcset="cemetery.webp 350w, cemetery-b.webp 500w" sizes="(maxWidth : 350px) 350px , (maxWidth : 500px) 500px">
+            <img width="500" height="357" id="gis2--image" class="" alt="Topography Map" loading="lazy" srcset="GIS2.webp 350w, GIS2-b.webp 500w" sizes="(maxWidth : 350px) 350px , (maxWidth : 500px) 500px">
         </div>  
     </div>
 </section>
@@ -183,6 +183,7 @@
     }
     #services--images--contain {
         position: relative;
+        aspect-ratio: 500 / 357;
     }
     #services--images--contain > img {
         display:none;
@@ -201,8 +202,8 @@
             max-width: 350px;
         }
         #services--images--contain > img.active {
-            max-width: 100%;
-            max-height:350px;
+            width: 100%;
+            height:250px;
             display:block;
         }
     }
@@ -259,6 +260,11 @@
             max-width: 100%;
             max-height:357px;
             display:block;
+        }
+        #services--images--contain > img.active {
+            max-width: 500px;
+            width: 100%;
+            height:auto;
         }
     }
 
