--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -190,7 +190,8 @@
         border: 12px solid #0063A7;
     }
     #services--images--contain > img.active {
-        max-height:350px;
+        box-sizing: unset;
+        max-height:357px;
         display:block;
     }
     /* Mobile Stuff */
@@ -257,12 +258,8 @@
             padding:24px 0px 0px 0px;
         }
         #services--images--contain > img.active {
-            max-width: 100%;
-            max-height:357px;
             display:block;
-        }
-        #services--images--contain > img.active {
-            max-width: 500px;
+            max-width: calc(100% - 24px);
             width: 100%;
             height:auto;
         }
